# javajs

./: README.md
java/: build.gradle
java/src/main/java/io/manxboy/js/: Internal.java  JsContext.java  JsException.java  JsLogger.java  JsRuntime.java  PropertyDescriptor.java  ScriptOrigin.java
java/src/main/java/io/manxboy/js/impl/: V8Ref.java
java/src/main/java/io/manxboy/js/script/: JsModule.java  JsScript.java
java/src/main/java/io/manxboy/js/value/: JsArray.java  JsContext.java  JsError.java  JsFunction.java  JsMap.java  JsObject.java  JsPromise.java  JsRuntime.java  JsSet.java  JsSymbol.java  JsValue.java
java/src/test/java/io/manxboy/js/test/: Main.java
jni/: CMakeLists.txt
jni/src/: JsContext.cpp  JsRuntime.cpp  util.cpp  util.h
jni/src/script/: JsModule.cpp  JsScript.cpp
jni/src/value/: JsArray.cpp  JsContext.cpp  JsError.cpp  JsFunction.cpp  JsMap.cpp  JsObject.cpp  JsPromise.cpp  JsRuntime.cpp  JsSet.cpp  JsSymbol.cpp  JsValue.cpp
